--- a/server/Dependencies.toml
+++ b/server/Dependencies.toml
@@ -360,6 +360,7 @@ dependencies = [
 ]
 modules = [
 	{org = "sansi", packageName = "server", moduleName = "server"},
-	{org = "sansi", packageName = "server", moduleName = "server.medisense_services"}
+	{org = "sansi", packageName = "server", moduleName = "server.medisense_services"},
+	{org = "sansi", packageName = "server", moduleName = "server.read_user"}
 ]
 
