--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -58,6 +58,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - lib/Resources/images/001_blueCapsules.jpg
+    - lib/Resources/images/logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
