user registation patient

--- a/server/Dependencies.toml
+++ b/server/Dependencies.toml
@@ -360,7 +360,9 @@ dependencies = [
 ]
 modules = [
 	{org = "sansi", packageName = "server", moduleName = "server"},
+	{org = "sansi", packageName = "server", moduleName = "server.login"},
 	{org = "sansi", packageName = "server", moduleName = "server.medisense_services"},
-	{org = "sansi", packageName = "server", moduleName = "server.read_user"}
+	{org = "sansi", packageName = "server", moduleName = "server.read_user"},
+	{org = "sansi", packageName = "server", moduleName = "server.user"}
 ]
 
