--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -62,6 +62,9 @@ flutter:
   assets:
     - lib/Resources/images/001_blueCapsules.jpg
     - lib/Resources/images/logo.png
+    - lib/Resources/images/logo_H.png
+    - lib/Resources/images/stethoscope1.png
+    - lib/Resources/images/DocHomeBG.jpg
 
   fonts:
     - family: Montserrat
