--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -16,8 +16,8 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
-        //jvmTarget = JavaVersion.VERSION_1_8
+        //jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8
     }
 
     defaultConfig {
